--- a/UIPageViewWhithUsDots/Base.lproj/Main.storyboard
+++ b/UIPageViewWhithUsDots/Base.lproj/Main.storyboard
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="14490.70" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="ear-5x-Jea">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="14490.70" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="dPX-0o-AaG">
     <device id="retina4_7" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
@@ -10,18 +10,57 @@
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
+        <!--MyVC-->
+        <scene sceneID="ATu-6w-JqS">
+            <objects>
+                <viewController id="dPX-0o-AaG" customClass="MyVC" customModule="UIPageViewWhithUsDots" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="Hf3-zL-B5f">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <containerView opaque="NO" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="DH4-Ds-Rqh">
+                                <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                                <color key="backgroundColor" red="0.99953407049999998" green="0.98835557699999999" blue="0.47265523669999998" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                <connections>
+                                    <segue destination="ear-5x-Jea" kind="embed" id="oAG-kC-D7H"/>
+                                </connections>
+                            </containerView>
+                            <pageControl opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" numberOfPages="3" translatesAutoresizingMaskIntoConstraints="NO" id="zco-Dz-jya">
+                                <rect key="frame" x="16" y="20" width="343" height="37"/>
+                            </pageControl>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <constraints>
+                            <constraint firstItem="DH4-Ds-Rqh" firstAttribute="trailing" secondItem="eUL-ET-Tdo" secondAttribute="trailing" id="9gw-BQ-Wid"/>
+                            <constraint firstItem="zco-Dz-jya" firstAttribute="leading" secondItem="eUL-ET-Tdo" secondAttribute="leading" constant="16" id="AQX-ib-SEX"/>
+                            <constraint firstItem="zco-Dz-jya" firstAttribute="top" secondItem="eUL-ET-Tdo" secondAttribute="top" id="HXZ-z2-QA4"/>
+                            <constraint firstItem="DH4-Ds-Rqh" firstAttribute="top" secondItem="Hf3-zL-B5f" secondAttribute="top" id="I43-an-6ey"/>
+                            <constraint firstItem="DH4-Ds-Rqh" firstAttribute="bottom" secondItem="eUL-ET-Tdo" secondAttribute="bottom" id="acI-Mm-1Dc"/>
+                            <constraint firstItem="eUL-ET-Tdo" firstAttribute="trailing" secondItem="zco-Dz-jya" secondAttribute="trailing" constant="16" id="d4s-a4-5fn"/>
+                            <constraint firstItem="DH4-Ds-Rqh" firstAttribute="leading" secondItem="eUL-ET-Tdo" secondAttribute="leading" id="y2a-T1-Uib"/>
+                        </constraints>
+                        <viewLayoutGuide key="safeArea" id="eUL-ET-Tdo"/>
+                    </view>
+                    <connections>
+                        <outlet property="dots" destination="zco-Dz-jya" id="mOJ-Fm-qdT"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="0QN-Mx-ofn" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="402" y="113"/>
+        </scene>
         <!--My Page View Controller-->
         <scene sceneID="Iho-tW-ozR">
             <objects>
-                <pageViewController autoresizesArchivedViewToFullSize="NO" transitionStyle="scroll" navigationOrientation="horizontal" spineLocation="none" id="ear-5x-Jea" customClass="MyPageViewController" customModule="UIPageViewWhithDots" customModuleProvider="target" sceneMemberID="viewController"/>
+                <pageViewController autoresizesArchivedViewToFullSize="NO" transitionStyle="scroll" navigationOrientation="horizontal" spineLocation="none" id="ear-5x-Jea" customClass="MyPageViewController" customModule="UIPageViewWhithUsDots" customModuleProvider="target" sceneMemberID="viewController"/>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="VVn-lQ-WlR" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="843" y="109"/>
+            <point key="canvasLocation" x="1210" y="113"/>
         </scene>
         <!--My View Controller-->
         <scene sceneID="JYo-Xn-E4H">
             <objects>
-                <viewController id="b5S-eH-MCc" customClass="MyViewController" customModule="UIPageViewWhithDots" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController id="b5S-eH-MCc" customClass="MyViewController" customModule="UIPageViewWhithUsDots" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="m8n-1n-PJO">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
@@ -31,7 +70,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="5xK-8C-YI1" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1806" y="113"/>
+            <point key="canvasLocation" x="1946" y="113"/>
         </scene>
     </scenes>
 </document>
